--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.yamada_pc.calc_easy.MainActivity">
 
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -30,12 +35,15 @@
                 android:inputType="numberDecimal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/edit_kg" />
+                android:hint="@string/edit_kg"
+                android:layout_gravity="center"/>
+
             <TextView
                 android:text="kg ×"
-                android:textSize="20dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <Spinner
                 android:layout_width="50dp"
@@ -45,13 +53,15 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:entries="@array/Numberlist"
-                android:spinnerMode="dialog" />
+                android:spinnerMode="dialog"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:text="回"
-                android:textSize="20dp"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content" />
+                android:textSize="24dp"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <Button
                 android:id="@+id/kg_button"
@@ -63,23 +73,27 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/MAX_1RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="1回   "
-                android:textSize="30dp"
+                android:text="  1回"
+                android:textSize="24dp"
+                android:clickable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
+                android:layout_weight="0.01"
                 android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/MAX_kg_view"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -87,39 +101,35 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
-
-                <Button
-                    android:id="@+id/MAX_1RM_button"
-                    android:text="〇"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"/>
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/MAX_3RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="3回   "
-                android:textSize="30dp"
+                android:text="  3回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
+                android:layout_weight="0.01"
                 android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM3"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -127,39 +137,36 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
-            <Button
-                android:id="@+id/MAX_3RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/MAX_5RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="5回   "
-                android:textSize="30dp"
+                android:text="  5回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
+                android:layout_weight="0.01"
                 android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM5"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -167,39 +174,35 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
-
-            <Button
-                android:id="@+id/MAX_5RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/MAX_7RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="7回   "
-                android:textSize="30dp"
+                android:text="  7回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
+                android:layout_weight="0.01"
                 android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM7"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -207,39 +210,36 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
-
-            <Button
-                android:id="@+id/MAX_7RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/MAX_8RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="8回   "
-                android:textSize="30dp"
+                android:text="  8回"
+                android:textSize="24dp"
+                android:layout_weight="0.01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:id="@+id/textView5" />
 
             <TextView
                 android:id="@+id/weight_RM8"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -247,38 +247,35 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
-
-            <Button
-                android:id="@+id/MAX_8RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
 
         </LinearLayout>
 
 
 
         <LinearLayout
+            android:id="@+id/MAX_10RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="10回 "
-                android:textSize="30dp"
+                android:text="10回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM10"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -286,37 +283,34 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
-            <Button
-                android:id="@+id/MAX_10RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
-
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/MAX_12RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="12回 "
-                android:textSize="30dp"
+                android:text="12回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView3" />
+                android:id="@+id/textView3"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM12"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -324,36 +318,34 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
-            <Button
-                android:id="@+id/MAX_12RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/MAX_15RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="15回 "
-                android:textSize="30dp"
+                android:text="15回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM15"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -361,36 +353,33 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
-            <Button
-                android:id="@+id/MAX_15RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
-
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/MAX_20RM_button"
+            android:clickable="true"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
-                android:text="20回 "
-                android:textSize="30dp"
+                android:text="20回"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/weight_RM20"
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
@@ -398,17 +387,10 @@
             <TextView
                 android:text="kg  "
                 android:maxWidth="120dp"
-                android:textSize="30dp"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
-
-            <Button
-                android:id="@+id/MAX_20RM_button"
-                android:text="〇"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
 
         </LinearLayout>
 
@@ -421,5 +403,7 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
